Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-69554

TableView segfaults when closing Game of Life example

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • None
    • 5.12
    • None

    Description

      When closing this example, I get a segfault:

      1  QQuickTableViewPrivate::dumpTable                                                qquicktableview.cpp         127  0x7fffda5e1db5
      2  QQuickTableViewPrivate::<lambda()>::operator()                                   qquicktableview.cpp         153  0x7fffda5e24ce
      3  QQuickTableViewPrivate::modelIndexAtCell                                         qquicktableview.cpp         153  0x7fffda5e24ce
      4  QQuickTableViewPrivate::cancelLoadRequest                                        qquicktableview.cpp         802  0x7fffda5e3888
      5  QQuickTableViewPrivate::clear                                                    qquicktableview.cpp         395  0x7fffda5e3ae6
      6  QQuickTableViewPrivate::~QQuickTableViewPrivate                                  qquicktableview.cpp         108  0x7fffda5e3b11
      7  QQuickTableViewPrivate::~QQuickTableViewPrivate                                  qquicktableview.cpp         111  0x7fffda5e3d3b
      8  QScopedPointerDeleter<QObjectData>::cleanup                                      qscopedpointer.h            60   0x7ffff7038374
      9  QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData>>::~QScopedPointer qscopedpointer.h            107  0x7ffff7038374
      10 QObject::~QObject                                                                qobject.cpp                 887  0x7ffff7038374
      11 QQuickItem::~QQuickItem                                                          qquickitem.cpp              2382 0x7fffda4c4d49
      12 QQuickFlickable::~QQuickFlickable                                                qquickflickable.cpp         744  0x7fffda5768d2
      13 QQuickTableView::~QQuickTableView                                                qquicktableview_p.h         64   0x7fffe001be07
      14 QQmlPrivate::QQmlElement<QQuickTableView>::~QQmlElement                          qqmlprivate.h               103  0x7fffe001be07
      15 QQmlPrivate::QQmlElement<QQuickTableView>::~QQmlElement                          qqmlprivate.h               103  0x7fffe001be07
      16 QObjectPrivate::deleteChildren                                                   qobject.cpp                 2002 0x7ffff7036e74
      17 QObject::~QObject                                                                qobject.cpp                 1028 0x7ffff70383a6
      18 QWindow::~QWindow                                                                qwindow.cpp                 214  0x7ffff795f664
      19 QQuickWindow::~QQuickWindow                                                      qquickwindow.cpp            1308 0x7fffda4d8295
      20 QQuickWindowQmlImpl::~QQuickWindowQmlImpl                                        qquickwindowmodule_p.h      63   0x7fffd998611a
      21 QQuickApplicationWindow::~QQuickApplicationWindow                                qquickapplicationwindow.cpp 356  0x7fffd998611a
      22 QQmlPrivate::QQmlElement<QQuickApplicationWindow>::~QQmlElement                  qqmlprivate.h               103  0x7fffd988841e
      23 QQmlPrivate::QQmlElement<QQuickApplicationWindow>::~QQmlElement                  qqmlprivate.h               103  0x7fffd988841e
      24 qDeleteAll<QList<QObject *>::const_iterator>                                     qalgorithms.h               320  0x7ffff7666922
      25 qDeleteAll<QList<QObject *>>                                                     qalgorithms.h               328  0x7ffff7665435
      26 QQmlApplicationEnginePrivate::cleanUp                                            qqmlapplicationengine.cpp   64   0x7ffff7665435
      27 QQmlApplicationEngine::~QQmlApplicationEngine                                    qqmlapplicationengine.cpp   245  0x7ffff76654ae
      28 main                                                                             main.cpp                    59   0x555555557a30
      

      The window is null, but I'm not sure if there's another issue after the segfault is fixed, because I don't think it should try to access model indices while the count is 0:

      25:457 QQuickTableViewPrivate::modelIndexAtCell(const QPoint&) const::<lambda: output: modelIndex: 28528 cell: QPoint(111,112) count: 0
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            richard Richard Moe Gustavsen
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes