TableView: don't try to grab the window when it's null

Task-number: QTBUG-69554
Change-Id: If094f213bf4daa383f8a5fd0ed22ad8100ab0675
Reviewed-by: Paul Wicking <paul.wicking@qt.io>
Reviewed-by: Frederik Gladhorn <frederik.gladhorn@qt.io>